# CppPathTracer

./: .gitignore  CMakeLists.txt  CUDAPathTracer.sln  CUDAPathTracer.vcxproj  CUDAPathTracer.vcxproj.filters  README.md
cppSrc/: main.cpp  main_wnd.cpp  mp4_recorder.cpp  video_renderer.cpp
cuSrc/: bvh.cu  material.cu  motional_camera.cu  object.cu  path_tracer.cu  textures.cu
include/: bvh.h  logger.hpp  main_wnd.h  material.h  motional_camera.h  mp4_recorder.h  object.h  path_tracer.h  path_tracing_common.h  ray_tracing_common.h  ray_tracing_math.hpp  semaphore.h  textures.h  timer.hpp  video_renderer.h
include/opencv2/: opencv_modules.hpp
libs/: libavfilter.so.7.85.100  libopencv_photo.so.3.4.16  libswscale.so.5
src/: main.cpp  material.cpp  material.cu  mp4_recorder.cpp  object.cpp  object.cu  path_tracer.cpp  path_tracer.cu
